intro under coding

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 </head>
 
 <body>
-    <h1>this is a text message</h1>
+    <section class="intro-section">
+        <div class="intro-content-div">
+            <h1>Skip The Diet</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Net</h1>
+        </div>
+
+        <div class="intro-photo-div">
+            <img src="images/Group 8425.png" alt="intro-photo">
+        </div>
+    </section>
 </body>
 
 </html>
