order food button done

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 <body>
     <section class="intro-section">
         <div class="intro-content-div">
-            <h1>Skip The Diet</h1>
+            <h1><span class="orange-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
-            <h1>With Food Net</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet, because provide and healthy and delicious food for you!</p>
+            <p><a class="order-food-button" href="https://github.com/samimeadad/food-network">ORDER FOOD</a></p>
         </div>
 
         <div class="intro-photo-div">
