mid section added

--- a/index.html
+++ b/index.html
@@ -19,11 +19,29 @@
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
             <p>Imagine you don't need a diet, because provide and healthy and delicious food for you!</p>
-            <p><a class="order-food-button" href="https://github.com/samimeadad/food-network">ORDER FOOD</a></p>
+            <a class="button-decor" href="https://github.com/samimeadad/food-network" target="_blank">ORDER
+                FOOD</a>
         </div>
 
         <div class="intro-photo-div">
             <img src="images/Group 8425.png" alt="intro-photo">
+        </div>
+    </section>
+
+    <section class="mid-section">
+        <div class="mid-photo-div">
+            <img src="images/Person Image.png" alt="mid-section-photo">
+        </div>
+        <div class="mid-content-div">
+            <h1>About Me</h1>
+            <p>Since our modest beginnings in 2021 with a little space in Dhaka’s stylish Uttara locale,
+                <span class="orange-color">'Food Network's</span> development has been enlivened with the energy to cook
+                and serve solid, and delicious takeout food. In contrast to different kinds of eateries, <span
+                    class="orange-color">'Food Network</span> was made with the explicit expectation to appear as
+                something else.
+            </p>
+            <a class="button-decor" href="https://www.linkedin.com/in/sami-meadad-choudhury/" target="_blank">CONTACT
+                ME</a>
         </div>
     </section>
 </body>
