reciep section added without box shadow

--- a/index.html
+++ b/index.html
@@ -44,6 +44,34 @@
                 ME</a>
         </div>
     </section>
+
+    <section class="recipies-heading">
+        <h1>My Recipies</h1>
+        <p>“Food brings people together on many different levels. It’s nourishment of the soul and body; it’s truly
+            love.”</p>
+    </section>
+
+    <section class="recipies-section">
+        <div class="reccipies-section-div">
+            <img src="images/Project Cover.jpg" alt="">
+            <h3>English Breakfast</h3>
+            <p>If you really want to make a friend, go to someone’s house and eat with him… The people who give you
+                their food give you their heart.</p>
+        </div>
+        <div class="reccipies-section-div">
+            <img src="images/Project Cover1.jpg" alt="">
+            <h3>Beef Rib Steak</h3>
+            <p>I think steak is the ultimate comfort food, and if you're going out for one, that isn't the time to
+                scrimp on calories or quality.</p>
+        </div>
+        <div class="reccipies-section-div">
+            <img src="images/Project Cover.png" alt="">
+            <h3>Tom Yum Soup</h3>
+            <p>Soup puts the heart at ease, calms down the violence of hunger, eliminates the tension of the day, and
+                awakens and refines the appetite.
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>
