social section added

--- a/index.html
+++ b/index.html
@@ -72,6 +72,22 @@
             </p>
         </div>
     </section>
+
+    <section class="social-section">
+        <div class="social-div">
+            <h1>700k</h1>
+            <img src="images/youtube.png" alt="youtube logo">
+        </div>
+        <div class="social-div">
+            <h1>2.4m</h1>
+            <img src="images/instagram.png" alt="youtube logo">
+        </div>
+        <div class="social-div">
+            <h1>100k</h1>
+            <img src="images/facebook.png" alt="youtube logo">
+        </div>
+
+    </section>
 </body>
 
 </html>
