--- a/index.html
+++ b/index.html
@@ -86,8 +86,12 @@
             <h1>100k</h1>
             <img src="images/facebook.png" alt="youtube logo">
         </div>
-
     </section>
+    <footer>
+        <h2><span class="orange-color">Food</span> Network</h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
+
 </body>
 
 </html>
