basic requirement met updated

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1><span class="orange-color">Skip</span> The Diet,</h1>
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
-            <p>Imagine you don't need a diet, because provide and healthy and delicious food for you!</p>
+            <p>Imagine you don't need a diet, because we provide and healthy and delicious food for you!</p>
             <a class="button-decor" href="https://github.com/samimeadad/food-network" target="_blank">ORDER
                 FOOD</a>
         </div>
