basic requirement met updated

--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
         </div>
     </section>
     <footer>
-        <h2><span class="orange-color">Food</span> Network</h2>
+        <h1><span class="orange-color">FOOD</span> NETWORK</h1>
         <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        <p>&copy;Sami Meadad Choudhury</p>
     </footer>
 
 </body>
