--- a/index.html
+++ b/index.html
@@ -28,100 +28,97 @@
     </div>
     <!--Bonus Contents HTML TAG Ends here-->
 
-    <!Main Question Starts Here>
-        <section class="intro-section">
-            <div class="intro-content-div">
-                <h1><span class="orange-color">Skip</span> The Diet,</h1>
-                <h1>Just Eat Healthy</h1>
-                <h1>With Food Network</h1>
-                <p>Imagine you don't need a diet, because we provide and healthy and delicious food for you!</p>
-                <a class="button-decor" href="https://github.com/samimeadad/food-network" target="_blank">ORDER
-                    FOOD</a>
-            </div>
+    <!--Main Question Starts Here-->
+    <section class="intro-section">
+        <div class="intro-content-div">
+            <h1><span class="orange-color">Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet, because we provide and healthy and delicious food for you!</p>
+            <a class="button-decor" href="https://github.com/samimeadad/food-network" target="_blank">ORDER
+                FOOD</a>
+        </div>
 
-            <div class="intro-photo-div">
-                <img src="images/Group 8425.png" alt="intro-photo">
-            </div>
-        </section>
+        <div class="intro-photo-div">
+            <img src="images/Group 8425.png" alt="intro-photo">
+        </div>
+    </section>
 
-        <section class="mid-section">
-            <div class="mid-photo-div">
-                <img src="images/Person Image.png" alt="mid-section-photo">
-            </div>
-            <div class="mid-content-div">
-                <h1>About Me</h1>
-                <p>Since our modest beginnings in 2021 with a little space in Dhaka’s stylish Uttara locale,
-                    <span class="orange-color">'Food Network's</span> development has been enlivened with the
-                    energy
-                    to
-                    cook
-                    and serve solid, and delicious takeout food. In contrast to different kinds of eateries,
-                    <span class="orange-color">'Food Network</span> was made with the explicit expectation to
-                    appear
-                    as
-                    something else.
-                </p>
-                <a class="button-decor" href="https://www.linkedin.com/in/sami-meadad-choudhury/"
-                    target="_blank">CONTACT
-                    ME</a>
-            </div>
-        </section>
+    <section class="mid-section">
+        <div class="mid-photo-div">
+            <img src="images/Person Image.png" alt="mid-section-photo">
+        </div>
+        <div class="mid-content-div">
+            <h1>About Me</h1>
+            <p>Since our modest beginnings in 2021 with a little space in Dhaka’s stylish Uttara locale,
+                <span class="orange-color">'Food Network's</span> development has been enlivened with the
+                energy
+                to
+                cook
+                and serve solid, and delicious takeout food. In contrast to different kinds of eateries,
+                <span class="orange-color">'Food Network</span> was made with the explicit expectation to
+                appear
+                as
+                something else.
+            </p>
+            <a class="button-decor" href="https://www.linkedin.com/in/sami-meadad-choudhury/" target="_blank">CONTACT
+                ME</a>
+        </div>
+    </section>
 
-        <section class="recipies-heading">
-            <h1>My Recipies</h1>
-            <p>“Food brings people together on many different levels. It’s nourishment of the soul and body;
-                it’s
-                truly
-                love.”</p>
-        </section>
+    <section class="recipies-heading">
+        <h1>My Recipies</h1>
+        <p>“Food brings people together on many different levels. It’s nourishment of the soul and body;
+            it’s truly love.”</p>
+    </section>
 
-        <section class="recipies-section">
-            <div class="reccipies-section-div">
-                <img src="images/Project Cover.jpg" alt="">
-                <h3>English Breakfast</h3>
-                <p>If you really want to make a friend, go to someone’s house and eat with him… The people who
-                    give
-                    you
-                    their food give you their heart.</p>
-            </div>
-            <div class="reccipies-section-div">
-                <img src="images/Project Cover1.jpg" alt="">
-                <h3>Beef Rib Steak</h3>
-                <p>I think steak is the ultimate comfort food, and if you're going out for one, that isn't the
-                    time
-                    to
-                    scrimp on calories or quality.</p>
-            </div>
-            <div class="reccipies-section-div">
-                <img src="images/Project Cover.png" alt="">
-                <h3>Tom Yum Soup</h3>
-                <p>Soup puts the heart at ease, calms down the violence of hunger, eliminates the tension of the
-                    day,
-                    and
-                    awakens and refines the appetite.
-                </p>
-            </div>
-        </section>
+    <section class="recipies-section">
+        <div class="reccipies-section-div">
+            <img src="images/Project Cover.jpg" alt="">
+            <h3>English Breakfast</h3>
+            <p>If you really want to make a friend, go to someone’s house and eat with him… The people who
+                give
+                you
+                their food give you their heart.</p>
+        </div>
+        <div class="reccipies-section-div">
+            <img src="images/Project Cover1.jpg" alt="">
+            <h3>Beef Rib Steak</h3>
+            <p>I think steak is the ultimate comfort food, and if you're going out for one, that isn't the
+                time
+                to
+                scrimp on calories or quality.</p>
+        </div>
+        <div class="reccipies-section-div">
+            <img src="images/Project Cover.png" alt="">
+            <h3>Tom Yum Soup</h3>
+            <p>Soup puts the heart at ease, calms down the violence of hunger, eliminates the tension of the
+                day,
+                and
+                awakens and refines the appetite.
+            </p>
+        </div>
+    </section>
 
-        <section class="social-section">
-            <div class="social-div">
-                <h1>700k</h1>
-                <img src="images/youtube.png" alt="youtube logo">
-            </div>
-            <div class="social-div">
-                <h1>2.4m</h1>
-                <img src="images/instagram.png" alt="youtube logo">
-            </div>
-            <div class="social-div">
-                <h1>100k</h1>
-                <img src="images/facebook.png" alt="youtube logo">
-            </div>
-        </section>
-        <footer>
-            <h1><span class="orange-color">FOOD</span> NETWORK</h1>
-            <p>Eat healthy to live healthy. Live healthy to live happy</p>
-            <p>&copy;Sami Meadad Choudhury</p>
-        </footer>
+    <section class="social-section">
+        <div class="social-div">
+            <h1>700k</h1>
+            <img src="images/youtube.png" alt="youtube logo">
+        </div>
+        <div class="social-div">
+            <h1>2.4m</h1>
+            <img src="images/instagram.png" alt="youtube logo">
+        </div>
+        <div class="social-div">
+            <h1>100k</h1>
+            <img src="images/facebook.png" alt="youtube logo">
+        </div>
+    </section>
+    <footer>
+        <h1><span class="orange-color">FOOD</span> NETWORK</h1>
+        <p>Eat healthy to live healthy. Live healthy to live happy</p>
+        <p>&copy;Sami Meadad Choudhury</p>
+    </footer>
 
 </body>
 
