final alignment corrected

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
             <h1>Just Eat Healthy</h1>
             <h1>With Food Network</h1>
             <p>Imagine you don't need a diet, because we provide and healthy and delicious food for you!</p>
-            <a class="button-decor" href="https://github.com/samimeadad/food-network" target="_blank">ORDER
-                FOOD</a>
+            <a class="button-decor" href="https://github.com/samimeadad/food-network" target="_blank">
+                ORDER FOOD
+            </a>
         </div>
 
         <div class="intro-photo-div">
@@ -52,13 +53,8 @@
             <h1>About Me</h1>
             <p>Since our modest beginnings in 2021 with a little space in Dhaka’s stylish Uttara locale,
                 <span class="orange-color">'Food Network's</span> development has been enlivened with the
-                energy
-                to
-                cook
-                and serve solid, and delicious takeout food. In contrast to different kinds of eateries,
-                <span class="orange-color">'Food Network</span> was made with the explicit expectation to
-                appear
-                as
+                energy to cook and serve solid, and delicious takeout food. In contrast to different kinds of eateries,
+                <span class="orange-color">'Food Network</span> was made with the explicit expectation to appear as
                 something else.
             </p>
             <a class="button-decor" href="https://www.linkedin.com/in/sami-meadad-choudhury/" target="_blank">CONTACT
@@ -68,8 +64,8 @@
 
     <section class="recipies-heading">
         <h1>My Recipies</h1>
-        <p>“Food brings people together on many different levels. It’s nourishment of the soul and body;
-            it’s truly love.”</p>
+        <p>Food brings people together on many different levels. It’s nourishment of the soul and body;
+            it’s truly love.</p>
     </section>
 
     <section class="recipies-section">
@@ -77,25 +73,19 @@
             <img src="images/Project Cover.jpg" alt="">
             <h3>English Breakfast</h3>
             <p>If you really want to make a friend, go to someone’s house and eat with him… The people who
-                give
-                you
-                their food give you their heart.</p>
+                give you their food give you their heart.</p>
         </div>
         <div class="reccipies-section-div">
             <img src="images/Project Cover1.jpg" alt="">
             <h3>Beef Rib Steak</h3>
             <p>I think steak is the ultimate comfort food, and if you're going out for one, that isn't the
-                time
-                to
-                scrimp on calories or quality.</p>
+                time to crimp on calories or quality.</p>
         </div>
         <div class="reccipies-section-div">
             <img src="images/Project Cover.png" alt="">
             <h3>Tom Yum Soup</h3>
             <p>Soup puts the heart at ease, calms down the violence of hunger, eliminates the tension of the
-                day,
-                and
-                awakens and refines the appetite.
+                day, and awakens and refines the appetite.
             </p>
         </div>
     </section>
