home button href corrected

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span>FOOD NETWORK</span>
         </div>
         <div class="menu-div">
-            <a class="active">HOME</a>
+            <a class="active" href="index.html">HOME</a>
             <a href="#about">DINING HOURS</a>
             <a href="#menu">MENU</a>
             <a href="#contact">CONTACT</a>
